@@ -1,5 +1,9 @@
 21/07/14 -*- Version 2.2.0 -*-
 
+16/09/14 Julien Dutheil
+* Fixed bug in transfroemed parameters!
+  Derivative of tanh was incorrectly set to 1/cosh(x^2) instead of 1 / cosh^2(x) :s
+
 12/06/14 Julien Dutheil
 * Added --warning argument to BppApplication + new gestion of warnings.
 
